# String-Art

./: CMakeLists.txt
include/: config.h  imageProcessor.h  matrixGenerator.h  status.h
src/: config.cpp  imageProcessor.cpp  matrixGenerator.cpp  test.cpp
